--- a/app/static/src/app/main/footer/footer.component.html
+++ b/app/static/src/app/main/footer/footer.component.html
@@ -2,7 +2,7 @@
 
     <div fxLayout="row" fxLayoutAlign="center center" fxLayoutAlign.gt-xs="space-between center" fxFlex>
 
-        <a href="http://themeforest.net/item/fuse-angularjs-material-design-admin-template/12931855?ref=srcn"
+        <a href="http://presentacion.intellimove.com.mx/documentation"
            target="_blank" mat-button class="mat-pink-bg" fxFlex="0 0 auto" fxLayout="row"
            fxLayoutAlign="start center">
             <mat-icon class="s-16 mr-sm-4">code</mat-icon>
@@ -12,7 +12,7 @@
         <div fxLayout="row" fxLayoutAlign="start center" fxHide fxShow.gt-xs>
 
             <span>&bull;</span>
-            <a mat-button href="http://fusetheme.com/angular/changelog" target="_blank">Equipo SIT</a>
+            <a mat-button target="_blank">Equipo SIT</a>
         </div>
 
     </div>
